--- a/SynchronizitätsUntersuchung/SynchronizitaetsUntersuchung.csproj
+++ b/SynchronizitätsUntersuchung/SynchronizitaetsUntersuchung.csproj
@@ -30,11 +30,11 @@
     <DefineConstants>VSTO40</DefineConstants>
     <IsWebBootstrapper>False</IsWebBootstrapper>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PublishUrl>C:\Users\Smadback\Desktop\SynchronizitaetsUntersuchung\</PublishUrl>
+    <PublishUrl>D:\Programming\Visual Studio Projects\SynchronizitätsUntersuchung\Install\</PublishUrl>
     <InstallUrl />
     <TargetCulture>de</TargetCulture>
-    <ApplicationVersion>1.0.0.1</ApplicationVersion>
-    <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
+    <ApplicationVersion>1.0.0.0</ApplicationVersion>
+    <AutoIncrementApplicationRevision>false</AutoIncrementApplicationRevision>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
